# weblate-bannerlord

./: LICENSE  README.md  pyproject.toml
weblate_bannerlord/: __init__.py  addons.py  apps.py  discovery.py  formats.py
